--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,18 @@
-Package: firstproject
-Title: What the Package Does (one line, title case)
-Version: 0.0.0.9000
-Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
-Depends: R (>= 3.4.1)
-License: What license is it under?
+Package: travailarendre
+Type: Package
+Title: Assignment to give back on 16/10 
+Version: 0.1.0
+Author: Youssef Hantous
+Maintainer: The package maintainer <youssef.hantous@polytechnique.edu>
+Description: Reads and saves CSV, excels and other functions with prenoms.
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 6.0.1
+Imports: purrr,
+    magrittr,
+    tibble,
+    rstudioapi
+Suggests: knitr,
+    rmarkdown
+VignetteBuilder: knitr
