--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,3 +6,10 @@ export(my_csv_reader)
 export(my_xlsx_reader)
 export(read_xlsx_multi)
 export(save_as_csv)
+import(assertthat)
+import(dplyr)
+import(ggplot2)
+import(magrittr)
+import(prenoms)
+import(readxl)
+importFrom(readxl,excel_sheets)
