--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,13 @@ RoxygenNote: 6.0.1
 Imports: purrr,
     magrittr,
     tibble,
-    rstudioapi
+    rstudioapi,
+    dplyr,
+    readxl,
+    assertthat,
+    prenoms,
+    tidyr,
+    ggplot2
 Suggests: knitr,
     rmarkdown
 VignetteBuilder: knitr
